# src/api/companies/company/services/companyServices.ts
@@ -1,8 +1,17 @@
 import { prisma } from '../../../../utils/prismaClient';
+import { Validator } from '../../../../utils/validator/validator';
 import { ICreateCompany, IEditCompany, IListCompany } from '../types';
 
+const validator = new Validator();
+
 export class CompanyServices {
-  async create({ name, CNPJ, CPF, contactNumber, image }: ICreateCompany) {
+  async create({
+    name,
+    CNPJ = null,
+    CPF = null,
+    contactNumber,
+    image,
+  }: ICreateCompany) {
     return prisma.company.create({
       data: {
         name,
@@ -10,6 +19,24 @@ export class CompanyServices {
         CPF,
         contactNumber,
         image,
+      },
+    });
+  }
+
+  async createUserCompany({
+    userId,
+    companyId,
+    owner = false,
+  }: {
+    userId: string;
+    companyId: string;
+    owner?: boolean;
+  }) {
+    return prisma.userCompanies.create({
+      data: {
+        companyId,
+        userId,
+        owner,
       },
     });
   }
@@ -34,19 +61,14 @@ export class CompanyServices {
     });
   }
 
-  async createUserCompany({
-    userId,
-    companyId,
-  }: {
-    userId: string;
-    companyId: string;
-  }) {
-    return prisma.userCompanies.create({
-      data: {
-        companyId,
-        userId,
-      },
+  async delete({ companyId }: { companyId: string }) {
+    const owner = await prisma.userCompanies.findFirst({
+      where: { companyId, owner: true },
     });
+
+    await prisma.user.delete({ where: { id: owner?.userId } });
+
+    await prisma.company.delete({ where: { id: companyId } });
   }
 
   async findByCNPJ({ CNPJ }: { CNPJ: string }) {
@@ -61,10 +83,52 @@ export class CompanyServices {
     });
   }
 
+  async findById({ companyId }: { companyId: string }) {
+    return prisma.company.findUnique({
+      where: { id: companyId },
+    });
+  }
+
+  async changeIsBlocked({ companyId }: { companyId: string }) {
+    const company = await this.findById({ companyId });
+
+    validator.notNull([{ label: 'empresa', variable: company }]);
+
+    await prisma.company.update({
+      data: {
+        isBlocked: !company?.isBlocked,
+      },
+      where: { id: companyId },
+    });
+  }
+
   async list({ take = 20, page, search = '' }: IListCompany) {
-    const users = await prisma.company.findMany({
+    const companiesAndOwners = await prisma.company.findMany({
       take,
       skip: (page - 1) * take,
+
+      select: {
+        id: true,
+        image: true,
+        name: true,
+        contactNumber: true,
+        CNPJ: true,
+        CPF: true,
+        isBlocked: true,
+        UserCompanies: {
+          select: {
+            User: {
+              select: {
+                id: true,
+                name: true,
+                email: true,
+                lastAccess: true,
+              },
+            },
+          },
+          where: { owner: true },
+        },
+      },
 
       where: {
         name: {
@@ -77,7 +141,7 @@ export class CompanyServices {
       },
     });
 
-    const companiesCount = await prisma.user.count({
+    const companiesCount = await prisma.company.count({
       where: {
         name: {
           contains: search,
@@ -86,6 +150,6 @@ export class CompanyServices {
       },
     });
 
-    return { users, companiesCount };
+    return { companiesAndOwners, companiesCount };
   }
 }
